{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 58,
  "lineage": "f188f225-d4bb-9900-8b00-78997a7d13f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:security-group/sg-07b7a5ab145a652e0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07b7a5ab145a652e0",
            "ingress": [],
            "name": "all_worker_management20250803101838768900000005",
            "name_prefix": "all_worker_management",
            "owner_id": "528447111368",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-3188858327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07b7a5ab145a652e0",
            "security_group_rule_id": "sgr-0ab39bb940d8637c4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-1898759180",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07b7a5ab145a652e0",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:security-group/sg-00098c31032c7df6a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-00098c31032c7df6a",
            "ingress": [],
            "name": "abhi-eks-G0nGi0Re-cluster-20250803101840414400000007",
            "name_prefix": "abhi-eks-G0nGi0Re-cluster-",
            "owner_id": "528447111368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-G0nGi0Re-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "abhi-eks-G0nGi0Re-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:security-group/sg-0392b5bbdeab497ce",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0392b5bbdeab497ce",
            "ingress": [],
            "name": "abhi-eks-G0nGi0Re-node-20250803101838768900000006",
            "name_prefix": "abhi-eks-G0nGi0Re-node-",
            "owner_id": "528447111368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-G0nGi0Re-node",
              "cluster": "demo",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "owned"
            },
            "tags_all": {
              "Name": "abhi-eks-G0nGi0Re-node",
              "cluster": "demo",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3186281770",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00098c31032c7df6a",
            "security_group_rule_id": "sgr-0e225a457310f5601",
            "self": false,
            "source_security_group_id": "sg-0392b5bbdeab497ce",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4023180364",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-0264c431afb195305",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-274892232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-09e54aa7deb669b54",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-525756399",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-05810fdd9a8ec7c1c",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3591635065",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-09663eb8bc02bd4c5",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3309845592",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-0870e4af0e887b5f9",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2716405651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-02bc645d680c4deae",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-821136996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-04539cb022e0f606f",
            "self": false,
            "source_security_group_id": "sg-00098c31032c7df6a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1685074248",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-04434feddada8913f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-15939176",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-04b87d8926aafd6d4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2762773895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0392b5bbdeab497ce",
            "security_group_rule_id": "sgr-0545eed18bae34952",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:network-acl/acl-0548166099543efa7",
            "default_network_acl_id": "acl-0548166099543efa7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0548166099543efa7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "528447111368",
            "subnet_ids": [
              "subnet-041c8b7f7a3e6b6da",
              "subnet-064d23eb66e3443a9",
              "subnet-08b77ea0ba32843ae",
              "subnet-0f415ef3684f5ecf2"
            ],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:route-table/rtb-0f13dca551f72f417",
            "default_route_table_id": "rtb-0f13dca551f72f417",
            "id": "rtb-0f13dca551f72f417",
            "owner_id": "528447111368",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:security-group/sg-0d3bf37d2107e85d0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d3bf37d2107e85d0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "528447111368",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-default",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002fe8ed600d0bb9d",
            "arn": "arn:aws:ec2:us-west-1:528447111368:elastic-ip/eipalloc-002fe8ed600d0bb9d",
            "domain": "vpc",
            "id": "eipalloc-002fe8ed600d0bb9d",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-177-173-92.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.173.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:internet-gateway/igw-034e7870e7b5f7561",
            "id": "igw-034e7870e7b5f7561",
            "owner_id": "528447111368",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002fe8ed600d0bb9d",
            "association_id": "eipassoc-0a3d9cb274591e541",
            "connectivity_type": "public",
            "id": "nat-0febbf2baad931a82",
            "network_interface_id": "eni-03562185351a716cf",
            "private_ip": "10.0.4.169",
            "public_ip": "54.177.173.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-041c8b7f7a3e6b6da",
            "tags": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-029c7865b7b55340b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0febbf2baad931a82",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029c7865b7b55340b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-034e7870e7b5f7561",
            "id": "r-rtb-0bdc649cf815874721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bdc649cf81587472",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:route-table/rtb-029c7865b7b55340b",
            "id": "rtb-029c7865b7b55340b",
            "owner_id": "528447111368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:route-table/rtb-0bdc649cf81587472",
            "id": "rtb-0bdc649cf81587472",
            "owner_id": "528447111368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3a4073cbacdc755",
            "route_table_id": "rtb-029c7865b7b55340b",
            "subnet_id": "subnet-064d23eb66e3443a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0047329a516243ec9",
            "route_table_id": "rtb-029c7865b7b55340b",
            "subnet_id": "subnet-0f415ef3684f5ecf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9be4a9d82afe17c",
            "route_table_id": "rtb-0bdc649cf81587472",
            "subnet_id": "subnet-041c8b7f7a3e6b6da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b270a311ffee7eb",
            "route_table_id": "rtb-0bdc649cf81587472",
            "subnet_id": "subnet-08b77ea0ba32843ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:subnet/subnet-064d23eb66e3443a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064d23eb66e3443a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528447111368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:subnet/subnet-0f415ef3684f5ecf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f415ef3684f5ecf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528447111368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-private-us-west-1c",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:subnet/subnet-041c8b7f7a3e6b6da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041c8b7f7a3e6b6da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528447111368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1a",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:subnet/subnet-08b77ea0ba32843ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b77ea0ba32843ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "528447111368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "abhi-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc-public-us-west-1c",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a1c83ad6addf6d0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:528447111368:vpc/vpc-0a1c83ad6addf6d0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0548166099543efa7",
            "default_route_table_id": "rtb-0f13dca551f72f417",
            "default_security_group_id": "sg-0d3bf37d2107e85d0",
            "dhcp_options_id": "dopt-0ae82652e259a3965",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1c83ad6addf6d0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f13dca551f72f417",
            "owner_id": "528447111368",
            "tags": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            },
            "tags_all": {
              "Name": "abhi-eks-vpc",
              "kubernetes.io/cluster/abhi-eks-G0nGi0Re": "shared"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}